# SparseConv

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cpp/: CMakeLists.txt  cpu_spmma.cu
data/time/: resnet50_spmma_time.txt
doc/: resnet50.csv  resnet50.txt  tips.md
img/: transformer.drawio
interface/: interface.cu
nlp/: CMakeLists.txt  nlp_main.cu
nlp/generate_data/: transformer_ge.py
nlp/interface/: sparse_mma_gemm.cu  sparse_mma_gemm.cuh
nlp/test/: Test.cu  Test.cuh  test_nlp.cu  test_nlp.cuh  test_spmma.cu  test_spmma.cuh
nlp/transformer/: Attenion.cu  Attention.cu  Attention.cuh  Decoder.cu  Decoder.cuh  Encoder.cu  Encoder.cuh  FeedForward.cu  FeedForward.cuh  MatrixHalf.cu  MatrixHalf.cuh  Transformer.cu  Transformer.cuh  kernels_transformer.cu  kernels_transformer.cuh  net.cu  net.cuh
nlp/transformer/interface/: cublas_interface.cu  cublas_interface.cuh  cusparse_interface.cu  cusparse_interface.cuh  kernels_transformer.cu  kernels_transformer.cuh  spmma_interface.cu  spmma_interface.cuh
nlp/transformer/utils/: checks.cuh
ptx/: CMakeLists.txt  conf  cusparselt_example.cu  test_topi_resnet18.cu  wmma.sp.cuh  wmma_sp.cu
ptx/utils/: DataGenerator.cu  DataGenerator.cuh
python/: ge_data.py  generate_data.py  handle_time.py  my_resnet.py  my_transformer.py  sparse_mmad_data.py  transformer_torch.py
resnet/: CMakeLists.txt  resnet_main.cu
resnet/interface/: interfaces.cu  interfaces.cuh  resnet_kernel.cu  resnet_kernel.cuh
resnet/net/: MyResNet.cu  MyResNet.cuh
resnet/net/entity/: MyTensor.cu  MyTensor.cuh
resnet/test/: tests.cu  tests.cuh
spmma/: CMakeLists.txt  sparse_mma_zhk.cu  tmp.cu
spmma/entity/: ConvParam.cu  ConvParam.cuh  MatrixParam.cu  MatrixParam.cuh  Tensor4d.cu  Tensor4d.cuh
spmma/kernels/: kernels.cuh  sparse_conv.cu  sparse_conv.cuh  sparse_matmul.cu  sparse_matmul.cuh
spmma/test/: CMakeLists.txt  im2col_test.cu  test.cu  test_network.cu  test_resnet.cu
spmma/utils/: CudaTime.cu  CudaTime.cuh  const.cuh  util.cu  util.cuh
test/: CMakeLists.txt  test_event.cu  test_event.cuh  test_main.cu
topi/: conv2d.py  test.py
tvm/topi/: conv2d.py  tmp.txt  tmp2.txt
tvm/topi/cuda/: wmma.cu
utils/: CudaTime.cu
